--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
     </script> by Dai Nguyen, All Rights Reserved<br>
 
     <a href="http://validator.w3.org/check/referer" target="_blank" rel="noopener"><img
-            style="border:0;width:88px;height:26px;margin-top:10px;" src="imgs/valid_html.png"
+            style="border:0;width:88px;height:26px;margin-top:10px;" src="/_assets/imgs/valid_html.png"
             alt="Valid HTML!" /></a>
 
     <a href="https://jigsaw.w3.org/css-validator/validator?uri=dai-nguyen.com&profile=css3svg" target="_blank"
-        rel="noopener"><img style="border:0;width:95px;height:26px" src="imgs/valid_css.svg"
+        rel="noopener"><img style="border:0;width:95px;height:26px" src="/_assets/imgs/valid_css.svg"
             alt="Valid CSS!" /></a>
 </footer>
