--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
                 
                 
                 <span class="contact100-form-title">
-                    <h2>Let's get in touch!</h2>
+                    <p>Let's get in touch!</p>
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate="Required"> 
@@ -51,7 +51,7 @@
                 </div> 
 
                 <input type="hidden" name="_next" value="https://dai-nguyen.com?success"> 
-                <span class="note-input100"> <small>Help me fight spams!</small> <small>You will be taken to a reCAPTCHA page upon submission.</small><br> <small>To send message from your favorite mail client instead, 
+                <span class="note-input100"> <small>To prevent spams!</small> <small>You will be taken to a reCAPTCHA page upon submission.</small><br> <small>To send message from your favorite mail client instead, 
                 <a data-bind="attr: { href: url }" href="mailto:hello@dai-nguyen.com?subject=&amp;body=">click here</a>.</small> </span> <br>
 
                 <div class="container-contact100-form-btn"> 
