--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,6 @@
 <footer>
-    &copy; 2018 - <script>
-    document.write(new Date().getFullYear());
-    </script> by Dai Nguyen, All Rights Reserved<br>
+    &copy; 2018 - <span id="current-year"></span>
+    by Dai Nguyen, All Rights Reserved<br>
 
     <!-- <a href="http://validator.w3.org/check/referer" target="_blank" rel="noopener"><img
             style="border:0;width:88px;height:26px;margin-top:10px;" src="/_assets/imgs/valid_html.png"
