update google analytics tag

--- a/_layouts/projects-page.html
+++ b/_layouts/projects-page.html
@@ -10,14 +10,14 @@
 	<!-- Javascript -->
 	<script defer src="/_assets/js/all.js"></script>
 
-	<!-- Global site tag (gtag.js) - Google Analytics & Google Optimize-->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127509718-1"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-677YH6RSFF"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
 
-		gtag('config', 'UA-127509718-1');
+		gtag('config', 'G-677YH6RSFF');
 	</script>
 
 	<!-- Load CSS & FontAwesome When JavaScript is Disabled -->
